--- a/.gitlab/package.yml
+++ b/.gitlab/package.yml
@@ -56,6 +56,8 @@
   after_script:
     - sudo chown -R omnibus cache/
     - sudo rm -rf /opt/cinc-auditor/
+  variables:
+    OMNIBUS_FIPS_MODE: "false"
 
 .package:opensuse:
   extends: .package
