Switch to using CentOS Stream for EL8
Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -116,9 +116,9 @@ package:centos-7:aarch64:
 
 package:centos-8:x86_64:
   extends: .package:centos
-  image: cincproject/omnibus-centos:8
+  image: cincproject/omnibus-centos-stream:8
   cache:
-    key: centos:8:x86_64
+    key: centos-stream:8:x86_64
   tags:
     - docker-x86_64
   needs:
@@ -128,9 +128,9 @@ package:centos-8:x86_64:
 
 package:centos-8:aarch64:
   extends: .package:centos
-  image: cincproject/omnibus-centos:8
+  image: cincproject/omnibus-centos-stream:8
   cache:
-    key: centos:8:aarch64
+    key: centos-stream:8:aarch64
   tags:
     - docker-aarch64
   needs:
@@ -400,7 +400,7 @@ test:centos-7:aarch64:
 
 test:centos-8:x86_64:
   extends: .test:centos
-  image: cincproject/omnibus-centos:8
+  image: cincproject/omnibus-centos-stream:8
   needs:
     - package:centos-8:x86_64
   tags:
@@ -410,7 +410,7 @@ test:centos-8:x86_64:
 
 test:centos-8:aarch64:
   extends: .test:centos
-  image: cincproject/omnibus-centos:8
+  image: cincproject/omnibus-centos-stream:8
   needs:
     - package:centos-8:aarch64
   tags:
