--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ package:amazonlinux-2:x86_64:
   extends: .package:amazonlinux
   image: cincproject/omnibus-amazonlinux:2
   cache:
-    key: amazonlinux:2:x86_64
+    key: amazonlinux:2:x86_64:cinc-auditor-4
   tags:
     - docker-x86_64
   needs:
@@ -65,7 +65,7 @@ package:amazonlinux-2:aarch64:
   extends: .package:amazonlinux
   image: cincproject/omnibus-amazonlinux:2
   cache:
-    key: amazonlinux:2:aarch64
+    key: amazonlinux:2:aarch64:cinc-auditor-4
   tags:
     - docker-aarch64
   needs:
@@ -93,7 +93,7 @@ package:centos-7:x86_64:
   extends: .package:centos
   image: cincproject/omnibus-centos:7
   cache:
-    key: centos:7:x86_64
+    key: centos:7:x86_64:cinc-auditor-4
   tags:
     - docker-x86_64
   needs:
@@ -105,7 +105,7 @@ package:centos-7:aarch64:
   extends: .package:centos
   image: cincproject/omnibus-centos:7
   cache:
-    key: centos:7:aarch64
+    key: centos:7:aarch64:cinc-auditor-4
   tags:
     - docker-aarch64
   needs:
@@ -118,7 +118,7 @@ package:centos-8:x86_64:
   extends: .package:centos
   image: cincproject/omnibus-centos-stream:8
   cache:
-    key: centos-stream:8:x86_64
+    key: centos-stream:8:x86_64:cinc-auditor-4
   tags:
     - docker-x86_64
   needs:
@@ -130,7 +130,7 @@ package:centos-8:aarch64:
   extends: .package:centos
   image: cincproject/omnibus-centos-stream:8
   cache:
-    key: centos-stream:8:aarch64
+    key: centos-stream:8:aarch64:cinc-auditor-4
   tags:
     - docker-aarch64
   needs:
@@ -143,7 +143,7 @@ package:debian-9:x86_64:
   extends: .package:debian
   image: cincproject/omnibus-debian:9
   cache:
-    key: debian:9:x86_64
+    key: debian:9:x86_64:cinc-auditor-4
   tags:
     - docker-x86_64
   needs:
@@ -155,7 +155,7 @@ package:debian-10:x86_64:
   extends: .package:debian
   image: cincproject/omnibus-debian:10
   cache:
-    key: debian:10:x86_64
+    key: debian:10:x86_64:cinc-auditor-4
   tags:
     - docker-x86_64
   needs:
@@ -167,7 +167,7 @@ package:debian-10:aarch64:
   extends: .package:debian
   image: cincproject/omnibus-debian:10
   cache:
-    key: debian:10:aarch64
+    key: debian:10:aarch64:cinc-auditor-4
   tags:
     - docker-aarch64
   needs:
@@ -180,7 +180,7 @@ package:debian-11:x86_64:
   extends: .package:debian
   image: cincproject/omnibus-debian:11
   cache:
-    key: debian:11:x86_64
+    key: debian:11:x86_64:cinc-auditor-4
   tags:
     - docker-x86_64
   needs:
@@ -192,7 +192,7 @@ package:debian-11:aarch64:
   extends: .package:debian
   image: cincproject/omnibus-debian:11
   cache:
-    key: debian:11:aarch64
+    key: debian:11:aarch64:cinc-auditor-4
   tags:
     - docker-aarch64
   needs:
@@ -204,7 +204,7 @@ package:debian-11:aarch64:
 package:macos-10.15:
   extends: .package:macos
   cache:
-    key: macos:10.15
+    key: macos:10.15:cinc-auditor-4
   tags:
     - macos-10.15
   needs:
@@ -215,7 +215,7 @@ package:macos-10.15:
 package:macos-11:
   extends: .package:macos
   cache:
-    key: macos:11
+    key: macos:11:cinc-auditor-4
   tags:
     - macos-11
   needs:
@@ -226,7 +226,7 @@ package:macos-11:
 package:macos-11:aarch64:
   extends: .package:macos
   cache:
-    key: macos:11:aarch64
+    key: macos:11:aarch64:cinc-auditor-4
   tags:
     - macos-11-aarch64
   needs:
@@ -238,7 +238,7 @@ package:opensuse-15:x86_64:
   extends: .package:opensuse
   image: cincproject/omnibus-opensuse:15
   cache:
-    key: opensuse:15:x86_64
+    key: opensuse:15:x86_64:cinc-auditor-4
   tags:
     - docker-x86_64
   needs:
@@ -250,7 +250,7 @@ package:opensuse-15:aarch64:
   extends: .package:opensuse
   image: cincproject/omnibus-opensuse:15
   cache:
-    key: opensuse:15:aarch64
+    key: opensuse:15:aarch64:cinc-auditor-4
   tags:
     - docker-aarch64
   needs:
@@ -262,7 +262,7 @@ package:opensuse-15:aarch64:
 package:windows-2012r2:
   extends: .package:windows
   cache:
-    key: windows-2012r2
+    key: windows-2012r2-cinc-auditor-4
   tags:
     - windows-x64
   needs:
@@ -274,7 +274,7 @@ package:rhel-7:s390x:
   extends: .package:centos
   image: cincproject/omnibus-rhel:7
   cache:
-    key: rhel:7:s390x
+    key: rhel:7:s390x:cinc-auditor-4
   tags:
     - docker-s390x
   needs:
@@ -286,7 +286,7 @@ package:rhel-8:s390x:
   extends: .package:centos
   image: cincproject/omnibus-rhel:8
   cache:
-    key: rhel:8:s390x
+    key: rhel:8:s390x:cinc-auditor-4
   tags:
     - docker-s390x
   needs:
@@ -298,7 +298,7 @@ package:ubuntu-18.04:x86_64:
   extends: .package:ubuntu
   image: cincproject/omnibus-ubuntu:18.04
   cache:
-    key: ubuntu:18.04:x86_64
+    key: ubuntu:18.04:x86_64:cinc-auditor-4
   tags:
     - docker-x86_64
   needs:
@@ -310,7 +310,7 @@ package:ubuntu-18.04:aarch64:
   extends: .package:ubuntu
   image: cincproject/omnibus-ubuntu:18.04
   cache:
-    key: ubuntu:18.04:aarch64
+    key: ubuntu:18.04:aarch64:cinc-auditor-4
   tags:
     - docker-aarch64
   needs:
@@ -323,7 +323,7 @@ package:ubuntu-20.04:x86_64:
   extends: .package:ubuntu
   image: cincproject/omnibus-ubuntu:20.04
   cache:
-    key: ubuntu:20.04:x86_64
+    key: ubuntu:20.04:x86_64:cinc-auditor-4
   tags:
     - docker-x86_64
   needs:
@@ -335,7 +335,7 @@ package:ubuntu-20.04:aarch64:
   extends: .package:ubuntu
   image: cincproject/omnibus-ubuntu:20.04
   cache:
-    key: ubuntu:20.04:aarch64
+    key: ubuntu:20.04:aarch64:cinc-auditor-4
   tags:
     - docker-aarch64
   needs:
