--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -344,6 +344,31 @@ package:ubuntu-20.04:aarch64:
     PLATFORM_VER: "20.04"
     OMNIBUS_FIPS_MODE: "false"
 
+package:ubuntu-22.04:x86_64:
+  extends: .package:ubuntu
+  image: cincproject/omnibus-ubuntu:22.04
+  cache:
+    key: ubuntu:22.04:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "22.04"
+
+package:ubuntu-22.04:aarch64:
+  extends: .package:ubuntu
+  image: cincproject/omnibus-ubuntu:22.04
+  cache:
+    key: ubuntu:22.04:aarch64
+  tags:
+    - docker-aarch64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "22.04"
+    OMNIBUS_FIPS_MODE: "false"
+
 # Test stage
 
 test:amazonlinux-2:x86_64:
@@ -588,6 +613,26 @@ test:ubuntu-20.04:aarch64:
   variables:
     PLATFORM_VER: "20.04"
 
+test:ubuntu-22.04:x86_64:
+  extends: .test:ubuntu
+  image: cincproject/omnibus-ubuntu:22.04
+  needs:
+    - package:ubuntu-22.04:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "22.04"
+
+test:ubuntu-22.04:aarch64:
+  extends: .test:ubuntu
+  image: cincproject/omnibus-ubuntu:22.04
+  needs:
+    - package:ubuntu-22.04:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "22.04"
+
 test:windows-2012r2:
   extends: .test:windows
   needs:
@@ -638,6 +683,8 @@ deploy:
     - package:ubuntu-18.04:aarch64
     - package:ubuntu-20.04:x86_64
     - package:ubuntu-20.04:aarch64
+    - package:ubuntu-22.04:x86_64
+    - package:ubuntu-22.04:aarch64
     - package:windows-2012r2
   script:
     - ssh cinc@${DOWNLOADS_HOST} "mkdir -p /data/incoming/files/${CHANNEL}/cinc-auditor/$(cat VERSION)/"
