--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -314,7 +314,7 @@ package:windows-2012r2:
   cache:
     key: windows-2012r2-cinc-auditor-4
   tags:
-    - windows-x64
+    - windows-x64-ucrt64
   needs:
     - patch
   variables:
