--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -139,6 +139,31 @@ package:centos-8:aarch64:
     PLATFORM_VER: "8"
     OMNIBUS_FIPS_MODE: "false"
 
+package:centos-9:x86_64:
+  extends: .package:centos
+  image: cincproject/omnibus-centos-stream:9
+  cache:
+    key: centos-stream:9:x86_64:cinc-auditor-4
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "9"
+
+package:centos-9:aarch64:
+  extends: .package:centos
+  image: cincproject/omnibus-centos-stream:9
+  cache:
+    key: centos-stream:9:aarch64:cinc-auditor-4
+  tags:
+    - docker-aarch64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "9"
+    OMNIBUS_FIPS_MODE: "false"
+
 package:debian-9:x86_64:
   extends: .package:debian
   image: cincproject/omnibus-debian:9
@@ -456,6 +481,26 @@ test:centos-8:aarch64:
   variables:
     PLATFORM_VER: "8"
 
+test:centos-9:x86_64:
+  extends: .test:centos
+  image: cincproject/omnibus-centos-stream:9
+  needs:
+    - package:centos-9:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "9"
+
+test:centos-9:aarch64:
+  extends: .test:centos
+  image: cincproject/omnibus-centos-stream:9
+  needs:
+    - package:centos-9:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "9"
+
 test:debian-9:x86_64:
   extends: .test:debian
   image: cincproject/omnibus-debian:9
@@ -667,6 +712,8 @@ deploy:
     - package:centos-7:aarch64
     - package:centos-8:x86_64
     - package:centos-8:aarch64
+    - package:centos-9:x86_64
+    - package:centos-9:aarch64
     - package:debian-9:x86_64
     - package:debian-10:x86_64
     - package:debian-10:aarch64
