Use non-build node when testing on Windows
Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.gitlab/test.yml
+++ b/.gitlab/test.yml
@@ -60,7 +60,7 @@
 .test:windows:
   stage: test
   tags:
-    - windows-x64
+    - windows-x64-package-testing
   before_script:
     - ./scripts/install-cinc-auditor.ps1
   script:
